force-app/main/default/objects/ironclad__Ironclad_Contract__c/ironclad__Ironclad_Contract__c.object-meta.xml
<CustomObject>
    <label>Ironclad Contract</label>
    <nameField>
        <label>Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ironclad Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>