force-app/main/default/objects/ironclad__Ironclad_Contract__c/fields/ironclad__Ironclad_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>ironclad__Ironclad_Record_ID__c</fullName>
    <externalId>true</externalId>
    <label>Ironclad Record ID</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>