force-app/main/default/objects/ironclad__Ironclad_Contract__c/fields/ironclad__TestCustomField__c.field-meta.xml
<CustomField>
    <fullName>ironclad__TestCustomField__c</fullName>
    <label>TestCustomField</label>
    <length>100</length>
    <type>Text</type>
</CustomField>