force-app/main/default/objects/ironclad__Ironclad_Contract__c/fields/Late_Fee_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Late_Fee_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Late Fee Indicator</label>
    <type>Checkbox</type>
</CustomField>