force-app/main/default/objects/ironclad__Ironclad_Contract__c/fields/LOL_Value_of_Deposit__c.field-meta.xml
<CustomField>
    <fullName>LOL_Value_of_Deposit__c</fullName>
    <label>LOL Value of Deposit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>