force-app/main/default/objects/ironclad__Ironclad_Contract__c/fields/Price_Increase_Notice_Period__c.field-meta.xml
<CustomField>
    <fullName>Price_Increase_Notice_Period__c</fullName>
    <label>Price Increase Notice Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>