force-app/main/default/objects/ironclad__Ironclad_Contract__c/fields/Renewals_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Renewals_Allowed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Renewals Allowed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>