force-app/main/default/objects/ironclad__Ironclad_Contract__c/fields/Standard_Non_Standard__c.field-meta.xml
<CustomField>
    <fullName>Standard_Non_Standard__c</fullName>
    <label>Standard/Non-Standard</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Non-Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>