force-app/main/default/objects/ironclad__Ironclad_Contract__c/fields/Termination_Notice_Period__c.field-meta.xml
<CustomField>
    <fullName>Termination_Notice_Period__c</fullName>
    <label>Termination Notice Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>